# almost_ord

./: Cargo.toml  README.md
src/: iter_ext.rs
